--- a/Prisoners-Dilemma/Prisoners-Dilemma.Rmd
+++ b/Prisoners-Dilemma/Prisoners-Dilemma.Rmd
@@ -325,86 +325,338 @@ payoffs_p05 <- calculate_payoffs(0.5)
 ```{r}
 # Ensure your strategies are defined
 strategies <- list(
-    'Always Cooperate' = always_cooperate, 
-    'Always Defect' = always_defect, 
+    'Always Cooperate' = always_cooperate,
+    'Always Defect' = always_defect,
     'Tit for Tat' = tit_for_tat,
-    'Tit for Two Tats'=tit_for_two_tats,
-    'Tit for Tat with Forgiveness'=tit_for_tat_forgiveness,
-    'Tit for Tat with Randomisation'=tit_for_tat_randomisation,
-    Random = random_strategy,
-    'Grim/Trigger'=grim_trigger,
+    'Tit for Two Tats' = tit_for_two_tats,
+    'Tit for Tat with Forgiveness' = tit_for_tat_forgiveness,
+  #  'Tit for Tat with Randomisation' = tit_for_tat_randomisation,
+    'Random 10%' = random_0.1,
+    #'Random 25%' = random_0.25,
+    'Random 50%' = random_0.5,
+    #'Random 75%' = random_0.75,
+    'Random 90%' = random_0.9,
+    'Grim/Trigger' = grim_trigger,
     Pavlov = pavlov,
-    Prober=prober,
-    Bully= bully,
-    'Bounded Random Strategy'=bounded_random_strategy,
-    'Gradient Cooperation' =gradient_cooperation
+    Prober = prober,
+    Bully = bully,
+    'Bounded Random Strategy' = bounded_random_strategy,
+    'Gradient Cooperation' = gradient_cooperation
 )
 
 # Run the tournament payoff matrix function
 #tournament_payoff_matrix(strategies)
 
-symmetric_results <- tournament_payoff_matrix(strategies)
+
+
 ```
+
+
+loop for all different p values. grepple rank.
+create the same function that gives total compared to rank. 
+
+
+```{r}
+
+```
+
+
+
+Will be powerful to give a snapshot of one turnoment 
+
+
 
 \newpage
 
 \begin{landscape}
 
+
 ```{r}
 
+symmetric_results <- tournament_payoff_df(strategies,p=0)
 
-# Remove the original column names
-colnames(symmetric_results) <- NULL
+# Load required package
+library(kableExtra)
 
-# Print the nicely formatted table using kable
-kable(symmetric_results, caption = "Tournament Payoff Matrix for p=0", format = "latex", escape = FALSE) %>%
-    # Standardize the width of all columns (e.g., 10em)
-  column_spec(1:(ncol(symmetric_results)-2), width = "15em") %>%
-  
-  # Emphasize the last two columns by changing the background color and making text bold
-  column_spec((ncol(symmetric_results)):(ncol(symmetric_results)+1), 
-              width = "10em", bold = TRUE) %>%
-  # Standardize the width of all columns (e.g., 10em) and wrap long names in the header
-  # column_spec(1:ncol(symmetric_results), width = "10em") %>%
-  
-  # Add the column names in the header with wrapping using add_header_above
-  add_header_above(c(" " = 1, names(strategies),"Total","Rank")) %>% 
-    kable_styling(latex_options = c("striped", "hold_position", "scale_down"))
+# Assuming `symmetric_results` is the output from the function
+# and the column names include the 'Total' and 'Rank' with their p values.
+total_col_name <- grep("^Total", colnames(symmetric_results), value = TRUE)
+rank_col_name <- grep("^Rank", colnames(symmetric_results), value = TRUE)
+
+# Create a kable with nice formatting
+kable(symmetric_results, caption = "Tournament Payoff Matrix for p=0") %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"),
+                latex_options = c("scale_down", "hold_position"),
+                font_size = 8) %>%
+  column_spec(1, bold = TRUE) %>%  # Bold the row names (strategy names)
+  column_spec(2:(ncol(symmetric_results) - 1), width = "1cm") %>%  # Make non-important columns equally spaced
+  column_spec(ncol(symmetric_results) , bold = TRUE, color = "blue") %>%  # Highlight Total column
+  column_spec(ncol(symmetric_results)+1, bold = TRUE, color = "red") %>%  # Highlight Rank column
+  add_header_above(c(" " = 1, "Payoff Against Other Strategies" = ncol(symmetric_results) - 2, 
+                     "Total" = 1, "Rank" = 1))  # Add a header above for better readability
+
+```
+
+
+```{r}
+# ranking_matrix_for_sequence_p(strategies,rounds = 10,rank=TRUE) %>% 
+# kable( caption = "Rankings of Strategies Across Different Values of p") %>%
+#   kable_styling(latex_options = c("scale_down", "hold_position"), full_width = FALSE) %>%
+#   column_spec(1, bold = TRUE) %>%  # Make strategy names bold for emphasis
+#   column_spec(2:length(strategies), width = "1.5cm")  # Adjust width for better readability
+
 
 ```
 
 ```{r}
-# Print the nicely formatted table using kable
-# colnames(symmetric_results) <- gsub("_", "\\\\_", colnames(symmetric_results))
-# rownames(symmetric_results) <- gsub("_", "\\\\_", rownames(symmetric_results))
+strategies <- list(
+    'Always Cooperate' = always_cooperate,
+    'Always Defect' = always_defect,
+    'Tit for Tat' = tit_for_tat,
+    'Random 50%' = random_0.5,
+    'Grim/Trigger' = grim_trigger,
+    Pavlov = pavlov,
+    Bully = bully
+)
 
-# # Print the nicely formatted table using kable
-# kable(symmetric_results, caption = "Tournament Payoff Matrix for p=0", format = "latex", escape = FALSE) %>%
-#   kable_styling(latex_options = c("striped", "hold_position","scale_down")) %>%
-#   
-#   # Standardize the width of all columns (e.g., 10em) and wrap long names in the header
-#   column_spec(1:ncol(symmetric_results), width = "10em") %>%
-#   
-#   # Modify the column names to use \makecell for wrapping long names
-#   add_header_above(c(" " = 1, colnames(symmetric_results)))
+set.seed(100)
+result_df <- ranking_matrix_for_sequence_p(strategies, rounds = 200, rank = TRUE)
+create_bump_chart(result_df)
+```
+```{r}
+df<-ranking_matrix_for_sequence_p(strategies, rounds = 200, rank = FALSE)
+```
+
+
+```{r}
+set.seed(100)
+result_df <- ranking_matrix_for_sequence_p(strategies, rounds = 20, rank = TRUE,p = seq(-0.1, 0.5, 0.010))
+create_bump_chart(result_df)
+```
+
+
+```{r}
+set.seed(9890980)
+result_df <- ranking_matrix_for_sequence_p(strategies, rounds = 20, rank = TRUE)
+create_bump_chart(result_df)
+```
+
+
+```{r}
+set.seed(420)
+result_df <- ranking_matrix_for_sequence_p(strategies, rounds = 20, rank = TRUE)
+create_bump_chart(result_df)
+```
 
 
 
-# %>%
-#   
-#   # Set a standard column width (e.g., 2cm) for all columns to maintain uniformity
-#   column_spec(1:ncol(symmetric_results), width = "2cm") %>%
-#    
-# #   # Apply \makecell to wrap long text in column names
-#    add_header_above(c(" " = 1, 
-#                     sapply(colnames(symmetric_results), function(x) paste0("\\makecell{", x, "}")))) 
+
+
+```{r}
+
+
+# Example usage
+result_df <- ranking_matrix_for_sequence_p(strategies, rounds = 25, rank = TRUE)
+create_bump_chart(result_df)
+
+
+
+
 
 
 
 
 ```
+```{r}
+ranking_matrix_for_sequence_p(strategies, rounds = 10, rank = FALSE,payoffs = c())
+```
+
+
+
+```{r}
+
+df300roundsp0<-tournament_payoff_df(strategies, rounds =300)
+
+
+```
+
+```{r}
+df300roundsp0reduced<-tournament_payoff_df(strategies, rounds =300)
+```
+
+
+Creating a balanced split of strategies in a Prisoner’s Dilemma tournament is crucial for a fair evaluation, especially if you want to observe the relative strengths and weaknesses of different strategy types. Here’s a general guideline for how you might distribute **Tit-for-Tat and other cooperative strategies**, **defector strategies**, and **random strategies** to ensure a healthy and competitive environment:
+
+### 1. **Tit-for-Tat and Other Cooperative Strategies (~40%)**
+   - These strategies are designed to promote mutual cooperation but can retaliate against defectors. Including them ensures that there are opportunities for mutual benefit in the tournament.
+   - **Examples**: 
+     - Tit-for-Tat
+     - Tit-for-Two-Tats
+     - Tit-for-Tat with Forgiveness
+     - Tit-for-Tat with Randomization
+     - Pavlov (Win-Stay, Lose-Shift)
+     - Gradient Cooperation
+     - Bounded Random Strategy (if it leans towards cooperation)
+
+   - **Reasoning**: About 40% allows for a good mix of strategies that encourage cooperation but have varying levels of tolerance for defections. This way, there’s a fair chance for strategies like Tit-for-Tat to thrive if defectors don’t dominate the environment.
+
+### 2. **Defector Strategies (~40%)**
+   - Defector strategies create a more challenging environment for cooperative strategies, forcing them to prove their resilience and adaptability.
+   - **Examples**:
+     - Always Defect
+     - Grim/Trigger
+     - Periodic Defector
+     - Adaptive Defector
+     - Exploiter
+     - Retaliatory Defector
+     - Bully
+     - Prober
+
+   - **Reasoning**: This percentage allows defectors to have a significant impact, challenging nice strategies like Tit-for-Tat without dominating them completely. It ensures that the tournament is not overly skewed toward cooperation, providing a competitive landscape where cooperative strategies must adapt to survive.
+
+### 3. **Random Strategies (~20%)**
+   - Random strategies add variability and unpredictability to the tournament, which can challenge both cooperative and defector strategies by introducing noise.
+   - **Examples**:
+     - Random 10%
+     - Random 25%
+     - Random 50%
+     - Random 75%
+     - Random with Memory (where randomness depends on past moves)
+   
+   - **Reasoning**: About 20% for random strategies creates a balanced level of unpredictability without overwhelming the tournament with noise. Random strategies can sometimes exploit deterministic strategies and provide a benchmark to see how well the others adapt to unpredictability.
+
+### Summary of Strategy Distribution
+- **Tit-for-Tat and Cooperative Strategies**: ~40%
+- **Defector Strategies**: ~40%
+- **Random Strategies**: ~20%
+
+This setup allows for a balanced tournament where:
+- **Cooperative strategies** have enough similar strategies to collaborate with and avoid being wiped out by defectors.
+- **Defectors** present a sufficient challenge to the cooperators, testing their ability to adapt and avoid being exploited.
+- **Random strategies** add an element of unpredictability that can disrupt deterministic patterns and provide additional challenges.
+
+### Adjusting for Specific Goals
+- **To Promote Tit-for-Tat**: If you want to give **Tit-for-Tat** an edge, you might slightly increase the proportion of other **nice strategies** to around **50%**, giving Tit-for-Tat more opportunities to find cooperative partners.
+- **To Challenge Tit-for-Tat More**: Increase the proportion of **defector strategies** to around **50%** and reduce the **random strategies** to **10%**. This would create a tougher environment, pushing Tit-for-Tat to rely more on its retaliatory capabilities.
+
+This setup should allow for a fair and competitive tournament where each type of strategy can thrive under the right conditions, making it possible to draw meaningful conclusions about their effectiveness.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Increased Temptation: c(3, 8, 0, 1)
+Reduced Punishment: c(3, 5, 0, 2)
+Increased Reward for Cooperation: c(5, 3, 0, 1)
+
+
+Increased Temptation: c(3, 8, 0, 1)
+This structure provides a strong test of a strategy's ability to resist short-term gains for long-term benefits. It is particularly useful for identifying strategies that are susceptible to exploitation.
+
+
+Reduced Punishment: c(3, 5, 0, 2)
+This structure will encourage more risk-taking behavior, as the consequences of mutual defection are less severe. It is a good way to evaluate how strategies respond to a less punishing environment.
+
+
+Increased Reward for Cooperation: c(5, 3, 0, 1)
+This structure will test a strategy's ability to incentivize and maintain cooperation, even when the temptation to defect remains. It is especially useful for identifying strategies that are effective in promoting mutual benefit.
+
+
+
 
 \end{landscape}
+
+
+# Bump Chart
+
 
 
 
