--- a/Prisoners-Dilemma/Prisoners-Dilemma.tex
+++ b/Prisoners-Dilemma/Prisoners-Dilemma.tex
@@ -480,47 +480,44 @@ More Complex Strategies:
 
 Any feedback would be greatly appreciated.
 
+loop for all different p values. grepple rank. create the same function
+that gives total compared to rank.
+
 \newpage
 
 \begin{landscape}
 
-\begin{table}[!h]
-\centering
-\caption{\label{tab:unnamed-chunk-3}Tournament Payoff Matrix for p=0}
-\centering
-\resizebox{\ifdim\width>\linewidth\linewidth\else\width\fi}{!}{
-\begin{tabular}[t]{>{\raggedright\arraybackslash}p{15em}|>{\raggedleft\arraybackslash}p{15em}|>{\raggedleft\arraybackslash}p{15em}|>{\raggedleft\arraybackslash}p{15em}|>{\raggedleft\arraybackslash}p{15em}|>{\raggedleft\arraybackslash}p{15em}|>{\raggedleft\arraybackslash}p{15em}|>{\raggedleft\arraybackslash}p{15em}|>{\raggedleft\arraybackslash}p{15em}|>{\raggedleft\arraybackslash}p{15em}|>{\raggedleft\arraybackslash}p{15em}|>{\raggedleft\arraybackslash}p{15em}|>{\raggedleft\arraybackslash}p{15em}|r|>{\raggedleft\arraybackslash}p{10em}|>{\raggedleft\arraybackslash}p{10em}}
-\hline
-\multicolumn{1}{c|}{ } & \multicolumn{1}{c|}{Always Cooperate} & \multicolumn{1}{c|}{Always Defect} & \multicolumn{1}{c|}{Tit for Tat} & \multicolumn{1}{c|}{Tit for Two Tats} & \multicolumn{1}{c|}{Tit for Tat with Forgiveness} & \multicolumn{1}{c|}{Tit for Tat with Randomisation} & \multicolumn{1}{c|}{Random} & \multicolumn{1}{c|}{Grim/Trigger} & \multicolumn{1}{c|}{Pavlov} & \multicolumn{1}{c|}{Prober} & \multicolumn{1}{c|}{Bully} & \multicolumn{1}{c|}{Bounded Random Strategy} & \multicolumn{1}{c|}{Gradient Cooperation} & \multicolumn{1}{c|}{Total} & \multicolumn{1}{c}{Rank} \\
-\cline{2-2} \cline{3-3} \cline{4-4} \cline{5-5} \cline{6-6} \cline{7-7} \cline{8-8} \cline{9-9} \cline{10-10} \cline{11-11} \cline{12-12} \cline{13-13} \cline{14-14} \cline{15-15} \cline{16-16}
-Always Cooperate & 150 & 0 & 150 & 150 & 150 & 150 & 66 & 150 & 150 & 150 & 36 & 150 & 150 & 1602 & 10\\
-\hline
-\cellcolor{gray!10}{Always Defect} & \cellcolor{gray!10}{250} & \cellcolor{gray!10}{50} & \cellcolor{gray!10}{54} & \cellcolor{gray!10}{58} & \cellcolor{gray!10}{82} & \cellcolor{gray!10}{54} & \cellcolor{gray!10}{158} & \cellcolor{gray!10}{54} & \cellcolor{gray!10}{54} & \cellcolor{gray!10}{250} & \cellcolor{gray!10}{98} & \cellcolor{gray!10}{54} & \cellcolor{gray!10}{250} & \cellcolor{gray!10}{\textbf{1466}} & \cellcolor{gray!10}{\textbf{13}}\\
-\hline
-Tit for Tat & 150 & 49 & 150 & 150 & 150 & 150 & 107 & 150 & 150 & 150 & 85 & 150 & 150 & \textbf{1741} & \textbf{5}\\
-\hline
-\cellcolor{gray!10}{Tit for Two Tats} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{48} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{95} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{73} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{\textbf{1716}} & \cellcolor{gray!10}{\textbf{6}}\\
-\hline
-Tit for Tat with Forgiveness & 150 & 46 & 150 & 150 & 150 & 150 & 95 & 150 & 150 & 150 & 72 & 150 & 150 & \textbf{1713} & \textbf{7}\\
-\hline
-\cellcolor{gray!10}{Tit for Tat with Randomisation} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{49} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{119} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{85} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{\textbf{1753}} & \cellcolor{gray!10}{\textbf{3}}\\
-\hline
-Random & 206 & 24 & 112 & 168 & 128 & 114 & 114 & 26 & 31 & 202 & 65 & 113 & 212 & \textbf{1515} & \textbf{12}\\
-\hline
-\cellcolor{gray!10}{Grim/Trigger} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{49} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{145} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{97} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{\textbf{1791}} & \cellcolor{gray!10}{\textbf{2}}\\
-\hline
-Pavlov & 150 & 49 & 150 & 150 & 150 & 150 & 153 & 150 & 150 & 150 & 97 & 150 & 150 & \textbf{1799} & \textbf{1}\\
-\hline
-\cellcolor{gray!10}{Prober} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{0} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{93} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{36} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{\textbf{1629}} & \cellcolor{gray!10}{\textbf{8}}\\
-\hline
-Bully & 226 & 38 & 90 & 138 & 97 & 90 & 150 & 42 & 42 & 226 & 74 & 85 & 226 & \textbf{1524} & \textbf{11}\\
-\hline
-\cellcolor{gray!10}{Bounded Random Strategy} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{49} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{113} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{81} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{150} & \cellcolor{gray!10}{\textbf{1743}} & \cellcolor{gray!10}{\textbf{4}}\\
-\hline
-Gradient Cooperation & 150 & 0 & 150 & 150 & 150 & 150 & 75 & 150 & 150 & 150 & 36 & 150 & 150 & \textbf{1611} & \textbf{9}\\
-\hline
-\end{tabular}}
-\end{table}
+
+\begingroup\fontsize{8}{10}\selectfont
+
+\begin{longtable}[t]{>{}l>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{}r>{}r}
+\caption{\label{tab:unnamed-chunk-4}Tournament Payoff Matrix for p=0}\\
+\toprule
+\multicolumn{1}{c}{ } & \multicolumn{13}{c}{Payoff Against Other Strategies} & \multicolumn{1}{c}{Total} & \multicolumn{1}{c}{Rank} \\
+\cmidrule(l{3pt}r{3pt}){2-14} \cmidrule(l{3pt}r{3pt}){15-15} \cmidrule(l{3pt}r{3pt}){16-16}
+ & Always Cooperate & Always Defect & Tit for Tat & Tit for Two Tats & Tit for Tat with Forgiveness & Tit for Tat with Randomisation & Random & Grim/Trigger & Pavlov & Prober & Bully & Bounded Random Strategy & Gradient Cooperation & Total p0 & Rank p0\\
+\midrule
+\textbf{Always Cooperate} & 150 & 0 & 150 & 150 & 150 & 150 & 75 & 150 & 150 & 150 & 36 & 150 & 150 & \textcolor{blue}{\textbf{1611}} & \textcolor{red}{\textbf{9}}\\
+\textbf{Always Defect} & 250 & 50 & 54 & 58 & 82 & 54 & 130 & 54 & 54 & 250 & 98 & 54 & 250 & \textcolor{blue}{\textbf{1438}} & \textcolor{red}{\textbf{13}}\\
+\textbf{Tit for Tat} & 150 & 49 & 150 & 150 & 150 & 150 & 108 & 150 & 150 & 150 & 85 & 150 & 150 & \textcolor{blue}{\textbf{1742}} & \textcolor{red}{\textbf{4}}\\
+\textbf{Tit for Two Tats} & 150 & 48 & 150 & 150 & 150 & 150 & 82 & 150 & 150 & 150 & 73 & 150 & 150 & \textcolor{blue}{\textbf{1703}} & \textcolor{red}{\textbf{7}}\\
+\textbf{Tit for Tat with Forgiveness} & 150 & 45 & 150 & 150 & 150 & 150 & 106 & 150 & 150 & 150 & 75 & 150 & 150 & \textcolor{blue}{\textbf{1726}} & \textcolor{red}{\textbf{6}}\\
+\addlinespace
+\textbf{Tit for Tat with Randomisation} & 150 & 49 & 150 & 150 & 150 & 150 & 103 & 150 & 150 & 150 & 85 & 150 & 150 & \textcolor{blue}{\textbf{1737}} & \textcolor{red}{\textbf{5}}\\
+\textbf{Random} & 192 & 23 & 111 & 157 & 115 & 115 & 100 & 34 & 32 & 204 & 70 & 88 & 214 & \textcolor{blue}{\textbf{1455}} & \textcolor{red}{\textbf{12}}\\
+\textbf{Grim/Trigger} & 150 & 49 & 150 & 150 & 150 & 150 & 153 & 150 & 150 & 150 & 97 & 150 & 150 & \textcolor{blue}{\textbf{1799}} & \textcolor{red}{\textbf{1}}\\
+\textbf{Pavlov} & 150 & 49 & 150 & 150 & 150 & 150 & 137 & 150 & 150 & 150 & 97 & 150 & 150 & \textcolor{blue}{\textbf{1783}} & \textcolor{red}{\textbf{2}}\\
+\textbf{Prober} & 150 & 0 & 150 & 150 & 150 & 150 & 99 & 150 & 150 & 150 & 36 & 150 & 150 & \textcolor{blue}{\textbf{1635}} & \textcolor{red}{\textbf{8}}\\
+\addlinespace
+\textbf{Bully} & 226 & 38 & 90 & 138 & 102 & 90 & 115 & 42 & 42 & 226 & 74 & 90 & 226 & \textcolor{blue}{\textbf{1499}} & \textcolor{red}{\textbf{11}}\\
+\textbf{Bounded Random Strategy} & 150 & 49 & 150 & 150 & 150 & 150 & 112 & 150 & 150 & 150 & 90 & 150 & 150 & \textcolor{blue}{\textbf{1751}} & \textcolor{red}{\textbf{3}}\\
+\textbf{Gradient Cooperation} & 150 & 0 & 150 & 150 & 150 & 150 & 66 & 150 & 150 & 150 & 36 & 150 & 150 & \textcolor{blue}{\textbf{1602}} & \textcolor{red}{\textbf{10}}\\
+\bottomrule
+\end{longtable}
+\endgroup{}
+
+
+
 
 
 
