--- a/Prisoners-Dilemma/Prisoners-Dilemma.tex
+++ b/Prisoners-Dilemma/Prisoners-Dilemma.tex
@@ -286,7 +286,7 @@ situations at hand. In the context of the repeated prisoners' dilemma,
 the strategy of tit-for-tat, where one mimics their opponent's previous
 move, reigns supreme and is best suited over others for the situation at
 hand\footnote{The tic-for-tat strategy is the dominant strategy in
-  Axelrod (\citeproc{ref-axelrod1980effective}{1980})}.
+  Axelrod (1980)}.
 
 The question this paper aims to answer is as to which situations is
 tit-for-tat not the dominant strategy. To do this we have to venture
@@ -410,21 +410,149 @@ dominant strategy changes.
 Review\label{litreview}}{Literature Review}}\label{literature-review}
 
 We aim to do a short literature review and provide insight from the
-following sources: Lange \& Baylor
-(\citeproc{ref-lange2007teaching}{2007}), Farrell \& Ware
-(\citeproc{ref-farrell1988evolutionary}{1989}), Kreps, Milgrom, Roberts
-\& Wilson (\citeproc{ref-kreps1982rational}{1982}), Romero \& Rosokha
-(\citeproc{ref-romero2018constructing}{2018}), Bó \& Fréchette
-(\citeproc{ref-dalbo2019strategy}{2019}), Breitmoser
-(\citeproc{ref-breitmoser2015cooperation}{2015}), Gaudesi, Piccolo,
-Squillero \& Tonda (\citeproc{ref-gaudesi2016exploiting}{2016}), García
-\& Veelen (\citeproc{ref-garcia2018no}{2018}), Embrey, Fréchette \&
-Yuksel (\citeproc{ref-embrey2017cooperation}{2018}).
+following sources: Lange \& Baylor (2007), Farrell \& Ware (1989),
+Kreps, Milgrom, Roberts \& Wilson (1982), Romero \& Rosokha (2018), Bó
+\& Fréchette (2019), Breitmoser (2015), Gaudesi, Piccolo, Squillero \&
+Tonda (2016), García \& Veelen (2018), Embrey, Fréchette \& Yuksel
+(2018).
 
 Most importantly we aim to structure our output in tables similar to
-Axelrod (\citeproc{ref-axelrod1980effective}{1980}).
+Axelrod (1980).
 
 \section{Game Construction}\label{game-construction}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Always Strategies:
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  Always Cooperate
+\item
+  Always Defect
+\end{itemize}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\tightlist
+\item
+  Tit for Tat Variants:
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  Tit for Tat
+\item
+  Tit for Two Tats
+\item
+  Tit for Tat with Forgiveness
+\item
+  Tit for Tat with Randomization
+\end{itemize}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{2}
+\tightlist
+\item
+  Win-Stay/Lose-Switch Strategies:
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  Pavlov
+\end{itemize}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{3}
+\tightlist
+\item
+  Punishment-Based Strategies:
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  Grim Trigger
+\item
+  Bully
+\item
+  Retaliatory Defector
+\end{itemize}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{4}
+\tightlist
+\item
+  Adaptive/Adjusting Strategies:
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  Adaptive Defector
+\item
+  Adaptive Peacekeeper
+\item
+  Probing Adjuster
+\item
+  Forgiving Tester
+\item
+  Prober
+\item
+  Cautious Rebuilder
+\end{itemize}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{5}
+\tightlist
+\item
+  Gradient/Probability-Based Strategies:
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  Progressive Cooperator (Gradually increases cooperation)
+\item
+  Diminishing Cooperator (Gradually decreases cooperation)
+\item
+  Bounded Gradient (Probability based on the opponent's entire history)
+\item
+  Recent Gradient (Probability based on recent actions of the opponent)
+\end{itemize}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{6}
+\tightlist
+\item
+  Random Strategies:
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  Random 10\%
+\item
+  Random 25\%
+\item
+  Random 50\%
+\item
+  Random 75\%
+\item
+  Random 90\%
+\end{itemize}
 
 Game tournaments will take place in a round-robin format where all
 strategies play each other for \emph{N} number of games. Total utility
@@ -480,41 +608,12 @@ More Complex Strategies:
 
 Any feedback would be greatly appreciated.
 
-loop for all different p values. grepple rank. create the same function
-that gives total compared to rank.
+Will be powerful to give a snapshot of one turnoment
 
 \newpage
 
 \begin{landscape}
 
-
-\begingroup\fontsize{8}{10}\selectfont
-
-\begin{longtable}[t]{>{}l>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{\raggedleft\arraybackslash}p{1cm}>{}r>{}r}
-\caption{\label{tab:unnamed-chunk-4}Tournament Payoff Matrix for p=0}\\
-\toprule
-\multicolumn{1}{c}{ } & \multicolumn{13}{c}{Payoff Against Other Strategies} & \multicolumn{1}{c}{Total} & \multicolumn{1}{c}{Rank} \\
-\cmidrule(l{3pt}r{3pt}){2-14} \cmidrule(l{3pt}r{3pt}){15-15} \cmidrule(l{3pt}r{3pt}){16-16}
- & Always Cooperate & Always Defect & Tit for Tat & Tit for Two Tats & Tit for Tat with Forgiveness & Tit for Tat with Randomisation & Random & Grim/Trigger & Pavlov & Prober & Bully & Bounded Random Strategy & Gradient Cooperation & Total p0 & Rank p0\\
-\midrule
-\textbf{Always Cooperate} & 150 & 0 & 150 & 150 & 150 & 150 & 75 & 150 & 150 & 150 & 36 & 150 & 150 & \textcolor{blue}{\textbf{1611}} & \textcolor{red}{\textbf{9}}\\
-\textbf{Always Defect} & 250 & 50 & 54 & 58 & 82 & 54 & 130 & 54 & 54 & 250 & 98 & 54 & 250 & \textcolor{blue}{\textbf{1438}} & \textcolor{red}{\textbf{13}}\\
-\textbf{Tit for Tat} & 150 & 49 & 150 & 150 & 150 & 150 & 108 & 150 & 150 & 150 & 85 & 150 & 150 & \textcolor{blue}{\textbf{1742}} & \textcolor{red}{\textbf{4}}\\
-\textbf{Tit for Two Tats} & 150 & 48 & 150 & 150 & 150 & 150 & 82 & 150 & 150 & 150 & 73 & 150 & 150 & \textcolor{blue}{\textbf{1703}} & \textcolor{red}{\textbf{7}}\\
-\textbf{Tit for Tat with Forgiveness} & 150 & 45 & 150 & 150 & 150 & 150 & 106 & 150 & 150 & 150 & 75 & 150 & 150 & \textcolor{blue}{\textbf{1726}} & \textcolor{red}{\textbf{6}}\\
-\addlinespace
-\textbf{Tit for Tat with Randomisation} & 150 & 49 & 150 & 150 & 150 & 150 & 103 & 150 & 150 & 150 & 85 & 150 & 150 & \textcolor{blue}{\textbf{1737}} & \textcolor{red}{\textbf{5}}\\
-\textbf{Random} & 192 & 23 & 111 & 157 & 115 & 115 & 100 & 34 & 32 & 204 & 70 & 88 & 214 & \textcolor{blue}{\textbf{1455}} & \textcolor{red}{\textbf{12}}\\
-\textbf{Grim/Trigger} & 150 & 49 & 150 & 150 & 150 & 150 & 153 & 150 & 150 & 150 & 97 & 150 & 150 & \textcolor{blue}{\textbf{1799}} & \textcolor{red}{\textbf{1}}\\
-\textbf{Pavlov} & 150 & 49 & 150 & 150 & 150 & 150 & 137 & 150 & 150 & 150 & 97 & 150 & 150 & \textcolor{blue}{\textbf{1783}} & \textcolor{red}{\textbf{2}}\\
-\textbf{Prober} & 150 & 0 & 150 & 150 & 150 & 150 & 99 & 150 & 150 & 150 & 36 & 150 & 150 & \textcolor{blue}{\textbf{1635}} & \textcolor{red}{\textbf{8}}\\
-\addlinespace
-\textbf{Bully} & 226 & 38 & 90 & 138 & 102 & 90 & 115 & 42 & 42 & 226 & 74 & 90 & 226 & \textcolor{blue}{\textbf{1499}} & \textcolor{red}{\textbf{11}}\\
-\textbf{Bounded Random Strategy} & 150 & 49 & 150 & 150 & 150 & 150 & 112 & 150 & 150 & 150 & 90 & 150 & 150 & \textcolor{blue}{\textbf{1751}} & \textcolor{red}{\textbf{3}}\\
-\textbf{Gradient Cooperation} & 150 & 0 & 150 & 150 & 150 & 150 & 66 & 150 & 150 & 150 & 36 & 150 & 150 & \textcolor{blue}{\textbf{1602}} & \textcolor{red}{\textbf{10}}\\
-\bottomrule
-\end{longtable}
-\endgroup{}
 
 
 
@@ -522,6 +621,86 @@ that gives total compared to rank.
 
 
 \end{landscape}
+
+\begin{table}[!h]
+\centering
+\caption{\label{tab:unnamed-chunk-6}Strategy Rankings Across Different p Values}
+\centering
+\fontsize{8}{10}\selectfont
+\begin{tabular}[t]{>{\centering\arraybackslash}p{3cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}>{\centering\arraybackslash}p{0.7cm}}
+\toprule
+Strategy & -0.1 & -0.05 & 0 & 0.05 & 0.1 & 0.15 & 0.2 & 0.25 & 0.3 & 0.35 & 0.4 & 0.45 & 0.5\\
+\midrule
+\textbf{Always Cooperate} & 61 & 58.75 & 63 & 58.5 & 60 & 61.5 & 65 & 66.25 & 69 & 66.25 & 69 & 72 & 72\\
+\textbf{Always Defect} & 115 & 110 & 105 & 103.75 & 91.5 & 90 & 85 & 82.75 & 72.5 & 65.5 & 65 & 56.5 & 55\\
+\textbf{Tit for Tat} & 57.5 & 58.75 & 60 & 58.5 & 65 & 61.5 & 63 & 66.25 & 67.5 & 68.75 & 69 & 71.25 & 73\\
+\textbf{Tit for Two Tats} & 61 & 52.25 & 54 & 58.5 & 62.5 & 66 & 65 & 66.25 & 67.5 & 68.75 & 69 & 69.75 & 72.5\\
+\textbf{Tit for Tat with Forgiveness} & 57.5 & 55.5 & 54 & 64 & 60 & 63.75 & 67 & 66.25 & 67.5 & 67.5 & 67 & 70.5 & 72\\
+\textbf{Tit for Tat with Randomisation} & 54 & 55.5 & 57 & 64 & 62.5 & 66 & 65 & 66.25 & 64.5 & 68.75 & 68 & 70.5 & 72\\
+\textbf{Pavlov} & 50.5 & 52.25 & 60 & 61.25 & 62.5 & 61.5 & 65 & 66.25 & 67.5 & 66.25 & 70 & 70.5 & 72\\
+\textbf{Grim/Trigger} & 54 & 55.5 & 60 & 55.75 & 62.5 & 63.75 & 63 & 68 & 66 & 70 & 70 & 70.5 & 72.5\\
+\textbf{Bully} & 110.5 & 110 & 105 & 100 & 95 & 83.5 & 85 & 77.25 & 75 & 70 & 61 & 56.5 & 55\\
+\textbf{Retaliatory Defector} & 57.5 & 58.75 & 57 & 64 & 57.5 & 61.5 & 63 & 62.75 & 67.5 & 70 & 70 & 71.25 & 72\\
+\textbf{Adaptive Defector} & 57.5 & 55.5 & 60 & 58.5 & 62.5 & 59.25 & 65 & 66.25 & 69 & 67.5 & 69 & 70.5 & 73\\
+\textbf{Adaptive Peacekeep} & 57.5 & 58.75 & 60 & 58.5 & 60 & 66 & 65 & 66.25 & 66 & 68.75 & 70 & 72 & 72.5\\
+\textbf{Probing Adjuster} & 61 & 62 & 60 & 61.25 & 62.5 & 66 & 67 & 68 & 67.5 & 67.5 & 69 & 70.5 & 73\\
+\textbf{Forgiving Tester} & 57.5 & 58.75 & 57 & 61.25 & 60 & 61.5 & 63 & 62.75 & 64.5 & 67.5 & 71 & 69.75 & 72\\
+\textbf{Prober} & 57.5 & 55.5 & 60 & 58.5 & 65 & 63.75 & 65 & 64.5 & 66 & 67.5 & 69 & 71.25 & 72\\
+\textbf{Cautious Rebuilder} & 54 & 58.75 & 57 & 58.5 & 60 & 63.75 & 61 & 62.75 & 66 & 67.5 & 70 & 71.25 & 71.5\\
+\textbf{Progressive Cooperator} & 115 & 110 & 101 & 96.25 & 98.5 & 86.75 & 80 & 80 & 74.5 & 67.75 & 61 & 58.25 & 56.5\\
+\textbf{Deminishing Cooperator} & 54 & 62 & 60 & 59.25 & 60 & 63.75 & 67 & 62.75 & 64.5 & 68.75 & 69 & 71.25 & 72\\
+\textbf{Bounded Gradient} & 57.5 & 58.75 & 60 & 58.5 & 62.5 & 63.75 & 63 & 64.5 & 69 & 67.5 & 69 & 72 & 72\\
+\textbf{Recent Gradient} & 54 & 58.75 & 60 & 58.5 & 62.5 & 59.25 & 69 & 64.5 & 67.5 & 67.5 & 70 & 69.75 & 72.5\\
+\textbf{Random 10\%} & 113.5 & 103.25 & 105 & 94.75 & 91.5 & 89.75 & 80 & 75 & 75.5 & 68.25 & 64 & 58.75 & 57.5\\
+\textbf{Random 25\%} & 93.5 & 98.25 & 91 & 85 & 90 & 81 & 77 & 76.25 & 73.5 & 68.25 & 69 & 62.25 & 58.5\\
+\textbf{Random 50\%} & 87.5 & 70.75 & 83 & 80.75 & 77 & 80.75 & 72 & 72.25 & 66.5 & 69 & 67 & 64.5 & 60.5\\
+\textbf{Random 75\%} & 77 & 74.75 & 69 & 69.5 & 66 & 69.5 & 67 & 69.75 & 67 & 66.5 & 69 & 68.5 & 69\\
+\textbf{Random 90\%} & 65 & 66 & 65 & 63.75 & 59 & 70.25 & 67 & 65.75 & 67.5 & 69 & 70 & 68.25 & 71.5\\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\begin{figure}[H]
+
+{\centering \includegraphics{Prisoners-Dilemma_files/figure-latex/unnamed-chunk-7-1} 
+
+}
+
+\caption{Strategy Ranks Across Different Values of p\label{pvalues}}\label{fig:unnamed-chunk-7}
+\end{figure}
+
+Defector Strategies Definition: These strategies lean towards defection
+more often than cooperation. They may defect unconditionally,
+strategically exploit others, or only cooperate under very specific
+conditions. Defector strategies prioritize short-term gains, aiming to
+maximize their own payoff without much regard for fostering mutual
+cooperation.
+
+Cooperative Strategies Definition: These strategies favour cooperation
+and are designed to foster mutual cooperation over multiple rounds. They
+aim to achieve better outcomes for both players through sustained
+cooperation, but they often include some mechanisms for retaliation to
+avoid being exploited.
+
+Increased Temptation: c(3, 8, 0, 1) Reduced Punishment: c(3, 5, 0, 2)
+Increased Reward for Cooperation: c(5, 3, 0, 1)
+
+Increased Temptation: c(3, 8, 0, 1) This structure provides a strong
+test of a strategy's ability to resist short-term gains for long-term
+benefits. It is particularly useful for identifying strategies that are
+susceptible to exploitation.
+
+Reduced Punishment: c(3, 5, 0, 2) This structure will encourage more
+risk-taking behavior, as the consequences of mutual defection are less
+severe. It is a good way to evaluate how strategies respond to a less
+punishing environment.
+
+Increased Reward for Cooperation: c(5, 3, 0, 1) This structure will test
+a strategy's ability to incentivize and maintain cooperation, even when
+the temptation to defect remains. It is especially useful for
+identifying strategies that are effective in promoting mutual benefit.
+
+\section{Bump Chart}\label{bump-chart}
 
 \newpage
 
